--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-src/main/java/com/lojaeletronicos/DAO/DatabaseConnection.java
+Projeto-Banco-de-Dados-2\lojaeletronicos\src\main\java\com\lojaeletronicos\DAO\DatabaseConnection.java
